<resources>
    <string name="app_name">Grocery Sync</string>

    <string name="login_title">Bienvenid@</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_remember">Recuerdame</string>
    <string name="login_signUp">¿Aún no tienes cuenta? Registrate</string>
    <string name="login_forgotten_password">He olvidado mi contraseña</string>
    <string name="login_btn_login">Iniciar sesión</string>
    <string name="login_btn_signup">Registrarme</string>
    <string name="login_error_email">Email no válido</string>
    <string name="login_error_password">La contraseña no puede estar vacía</string>

    <string name="signup_title">¡Únete a nosotros!</string>
    <string name="signup_name">Nombre</string>
    <string name="signup_lastname">Apellidos</string>
    <string name="signup_phone">Móvil (Opcional)</string>
    <string name="signup_repeatPassword">Repetir contraseña</string>
    <string name="signup_btn_createAccount">Crear mi cuenta</string>

    <string name="error_email_already_exists">El correo electrónico ya está en uso.</string>
    <string name="error_user_not_exists">El usuario introducido no existe.</string>
    <string name="error_invalid_credentials">Credenciales no válidas.</string>
    <string name="error_unknown">Error desconocido durante la operación.</string>
    <string name="error_passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_empty_masculine">El %s no puede estar vacío</string>
    <string name="error_empty_feminine">La %s no puede estar vacía</string>
    <string name="error_format">Formato del %s no válido</string>
    <string name="error_password_too_short">La contraseña debe contener al menos 6 caracteres</string>
    <string name="error_list_name">La lista debe tener un título</string>
    <string name="error_empty_shopping_list">No se pueden añadir listas vacías</string>

    <string name="http_bad_request">Algunos campos requeridos están vacíos</string>
    <string name="http_not_found">Usuario no encontrado</string>
    <string name="http_not_acceptable">Email no disponible</string>
    <string name="http_internal_error">Error en el servidor</string>
    <string name="http_forbidden">Acceso denegado</string>
    <string name="http_default_error">Ha surgido un problema inesperado</string>
    <string name="user_updated_success">Usuario actualizado con éxito</string>

    <string name="end_session">Cerrar Sesión</string>
    <string name="edit_user">Editar Usuario</string>

    <string name="opt_home_text">Home</string>
    <string name="opt_products_text">Productos</string>
    <string name="opt_account_text">Cuenta</string>
    <string name="opt_favourite_text">Favoritos</string>

    <string name="name">nombre</string>
    <string name="email">email</string>
    <string name="phone">teléfono</string>
    <string name="last_name">apellidos</string>
    <string name="password">contraseña</string>
    <string name="signup_success">Cuenta creada con éxito</string>
    <string name="http_invalid_credentials">Credenciales no válidas</string>

    <string name="supermarket_mercadona">Mercadona</string>
    <string name="supermarket_alcampo">Alcampo</string>
    <string name="supermarket_dia">Dia</string>
    <string name="supermarket_consum">Consum</string>
    <string name="filter_sortedBy">Ordenado por</string>
    <string name="filter_supermarket">Supermercados</string>
    <string name="filter_category">Categorias</string>
    <string name="filter_product_name">Nombre del producto</string>
    <string name="filter_favourite">Favorito</string>
    <string name="filter_on_sale">En oferta</string>
    <string name="filter_high_price">Precio Ascendente</string>
    <string name="filter_low_price">Precio Descendente</string>
    <string name="filter_a_z">A - Z</string>
    <string name="filter_z_a">Z - A</string>
    <string name="filter_apply_filter">APLICAR FILTROS</string>
    <string name="filter_product_name_hint">Escribe el nombre del producto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_variation_higher">El precio ha aumentado %.2f%% desde la última vez que lo añadiste a tus listas</string>
    <string name="price_variation_lower">¡APROVECHA! El precio ha disminuido %.2f%% desde la última vez que lo añadiste a tus listas</string>
    <string name="shopping_list_created">¡Lista de la compra creada!</string>
    <string name="error_creating_shopping_list">No se ha podido guardar la lista correctamente. Inténtelo más tarde</string>
    <string name="import_existing_list">Importar</string>
    <string name="add_new_list">Añadir</string>
    <string name="product_quantity">Cantidad</string>
    <string name="product_price">Precio</string>
    <string name="explanation_import_list">Pide el código de la lista al creador para poder importarla y disfrutar de ella tú también. Después, cópialo y pégalo en este recuadro.</string>
    <string name="hint_write_code">Escribe aquí el código de la lista</string>

    <string name="modify_list">Modificar lista</string>
    <string name="add_list">Añadir lista</string>
    <string name="shopping_list_modified">¡Lista de la compra modificada!</string>
    <string name="total_price">Precio total: %.2f€</string>
    <string name="shopping_list_created_at">Creada: %s</string>
    <string name="friend_share_code">Código amigo: %s</string>
</resources>